--- a/src/main/webapp/personaMocionList.xhtml
+++ b/src/main/webapp/personaMocionList.xhtml
@@ -38,9 +38,10 @@
                     <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="pi pi-times"/>
                 </p:confirmDialog>
 
-                <p:commandButton icon="fa fa-fw fa-edit"  value="Modificar" id="modificar" update="tablaPersonaMocion" action="#{personaBean.carga}">
+                <p:commandButton icon="fa fa-fw fa-edit"  value="Modificar" id="modificar" update="tablaPersonaMocion" action="#{personaMocionBean.carga}">
                     <f:param name="PersonaMocionId" value="#{personaMocion.ID_PERSONA_MOCION}"/><!--Aca se le pase el id para eliminar la persona-->
                 </p:commandButton>
+
             </p:column>
         </p:dataTable>
     </h:form>
