--- a/src/main/webapp/tipoMocionCreate.xhtml
+++ b/src/main/webapp/tipoMocionCreate.xhtml
@@ -13,13 +13,13 @@
     <h1>Crear Tipo de Mocion </h1>
 
     <h:form>
-        <p:growl id="msgs" showDetail="true"/>
-
-        <h:panelGrid columns="2" cellpadding="5">
+        <p:growl id="msgs" showDetail="true" rendered="#{not facesContext.validationFailed}"/>
+        <h:panelGrid columns="3" cellpadding="5" id="panel">
             <p:outputLabel indicateRequired="true" value="Descripcion:" for="descripcion"/>
             <p:inputText id="descripcion" required="true" requiredMessage="Ingrese una descripcion del tipo mocion" value="#{tipoMocionBean.tipoMocion.descripcion}"/>
+            <p:message for="descripcion"/>
         </h:panelGrid>
-        <p:commandButton value="Guardar" id="ajax" update="msgs" action="#{tipoMocionBean.create}" style="margin-right:20px;" styleClass="ui-priority-primary" />
+        <p:commandButton value="Guardar" id="ajax" update="msgs,panel" action="#{tipoMocionBean.create}" style="margin-right:20px;" styleClass="ui-priority-primary" />
         <p:linkButton outcome="tipoMocionList" value="Lista de tipo de Mociones" style="margin-right:20px;"/>
     </h:form>
 </h:body>
