--- a/src/main/webapp/tipoMocionUpdate.xhtml
+++ b/src/main/webapp/tipoMocionUpdate.xhtml
@@ -12,13 +12,13 @@
 <h:body>
     <h1>Actualizar Tipo de Mocion</h1>
     <h:form>
-        <p:growl id="msgs" showDetail="true"/>
-
-        <h:panelGrid columns="2" cellpadding="5">
-            <p:outputLabel value="Descripcion:" for="descripcion"/>
-            <p:inputText id="descripcion" value="#{tipoMocionBean.tipoMocion.descripcion}"/>
+        <p:growl id="msgs" showDetail="true" rendered="#{not facesContext.validationFailed}"/>
+        <h:panelGrid columns="3" cellpadding="5" id="panel">
+            <p:outputLabel indicateRequired="true" value="Descripcion:" for="descripcion"/>
+            <p:inputText id="descripcion" required="true" requiredMessage="Ingrese una descripcion del tipo mocion" value="#{tipoMocionBean.tipoMocion.descripcion}"/>
+            <p:message for="descripcion"/>
         </h:panelGrid>
-        <p:commandButton value="Actualizar" id="ajax" update="msgs" action="#{tipoMocionBean.update}" style="margin-right:20px;" styleClass="ui-priority-primary">
+        <p:commandButton value="Actualizar" id="ajax" update="msgs,panel" action="#{tipoMocionBean.update}" style="margin-right:20px;" styleClass="ui-priority-primary">
             <f:param name="PersonaId" value="#{tipoMocionBean.tipoMocion.ID_TIPO_MOCION}"/><!--Aca se le pase el id para eliminar la persona-->
         </p:commandButton>
         <p:linkButton outcome="tipoMocionList" value="Lista de tipo de mociones" style="margin-right:20px;"/>
