DIEGO ESTA VERGA NO LE GUSTA NADA DE CSS, ES UN DOLOORRRRR PERO CONFIE xD

--- a/src/main/webapp/personaMocionList.xhtml
+++ b/src/main/webapp/personaMocionList.xhtml
@@ -10,7 +10,8 @@
 <h:head>
 </h:head>
 <h:body>
-    <h1>Lista de Persona Mociones</h1>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <h1 class="principal" align="center">Lista de Persona Mociones</h1>
     <h:form>
         <p:dataTable var="personaMocion" value="#{personaMocionBean.personaMociones}" id="tablaPersonaMocion">
             <p:column headerText="Id">
