--- a/src/main/webapp/personaUpdate.xhtml
+++ b/src/main/webapp/personaUpdate.xhtml
@@ -10,7 +10,8 @@
 <h:head>
 </h:head>
 <h:body>
-    <h1>Actualizar Persona</h1>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <h1 class="principal">Actualizar Persona</h1>
 
     <h:form>
         <p:growl id="msgs" showDetail="true" rendered="#{not facesContext.validationFailed}"/>
