--- a/src/main/webapp/tipoMocionUpdate.xhtml
+++ b/src/main/webapp/tipoMocionUpdate.xhtml
@@ -10,7 +10,7 @@
 <h:head>
 </h:head>
 <h:body>
-    <h1>Actualizar Tipo de Mocion</h1>
+    <h1 class="principal">Actualizar Tipo de Mocion</h1>
     <h:form>
         <p:growl id="msgs" showDetail="true" rendered="#{not facesContext.validationFailed}"/>
         <h:panelGrid columns="3" cellpadding="5" id="panel">
