--- a/src/main/webapp/mocionList.xhtml
+++ b/src/main/webapp/mocionList.xhtml
@@ -10,7 +10,8 @@
 <h:head>
 </h:head>
 <h:body>
-    <h1>Lista de Mociones</h1>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <h1 class="principal" align="center">Lista de Mociones</h1>
     <h:form>
         <p:dataTable var="mocion" value="#{mocionBean.mociones}" id="tablaMocion">
             <p:column headerText="Id Mocion">
