--- a/src/main/webapp/personaMocionCreate.xhtml
+++ b/src/main/webapp/personaMocionCreate.xhtml
@@ -10,7 +10,8 @@
 <h:head>
 </h:head>
 <h:body>
-    <h1>Crear Persona Moción</h1>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <h1 class="principal">Crear Persona Moción</h1>
 
     <h:form>
         <p:growl id="msgs" showDetail="true"/>
@@ -33,6 +34,7 @@
         </h:panelGrid>
         <p:commandButton value="Guardar" id="ajax" update="msgs" action="#{personaMocionBean.create}" style="margin-right:20px;" styleClass="ui-priority-primary" />
         <p:linkButton outcome="personaMocionList" value="Lista Persona Mociones" style="margin-right:20px;"/>
+        <p:linkButton outcome="index" value="Menu Principal" style="margin-right:20px;"/>
     </h:form>
 </h:body>
 </html>
