--- a/src/main/webapp/personaMocionCreate.xhtml
+++ b/src/main/webapp/personaMocionCreate.xhtml
@@ -14,17 +14,21 @@
     <h1 class="principal">Crear Persona Moción</h1>
 
     <h:form>
-        <p:growl id="msgs" showDetail="true"/>
+        <p:growl id="msgs" showDetail="true" rendered="#{not facesContext.validationFailed}"/>
+        <h:panelGrid columns="2" cellpadding="5" id="panel">
 
-        <h:panelGrid columns="2" cellpadding="5">
             <p:outputLabel value="Id:" indicateRequired="true" for="ID_PERSONA_MOCION"/>
-            <p:inputText id="ID_PERSONA_MOCION" required="true" requiredMessage="Ingrese un id" pattern="[0-9]" value="#{personaMocionBean.personaMocion.ID_PERSONA_MOCION}"/>
+            <p:inputText id="ID_PERSONA_MOCION" required="true" requiredMessage="Ingrese un id" pattern="[0-9]"
+                         validatorMessage="Debe ingresar un id de minimo dos caracteres numericos" value="#{personaMocionBean.personaMocion.ID_PERSONA_MOCION}">
+                <f:validateLength minimum="1" />
+            </p:inputText>
             <p:outputLabel  value="Persona:" />
             <p:selectOneMenu value="#{personaMocionBean.personaMocion.persona}" converter="personaConverter">
                 <f:selectItems value="#{personaBean.personas}" var="persona"
                                itemValue="#{persona}"
                                itemLabel="#{persona.nombre}"/>
             </p:selectOneMenu>
+
             <p:outputLabel  value="Mocion:" />
             <p:selectOneMenu value="#{personaMocionBean.personaMocion.mocion}" converter="mocionConverter">
                 <f:selectItems value="#{mocionBean.mociones}" var="mocion"
@@ -32,7 +36,7 @@
                                itemLabel="#{mocion.texto}"/>
             </p:selectOneMenu>
         </h:panelGrid>
-        <p:commandButton value="Guardar" id="ajax" update="msgs" action="#{personaMocionBean.create}" style="margin-right:20px;" styleClass="ui-priority-primary" />
+        <p:commandButton value="Guardar" id="ajax" update="msgs,panel" action="#{personaMocionBean.create}" style="margin-right:20px;" styleClass="ui-priority-primary" />
         <p:linkButton outcome="personaMocionList" value="Lista Persona Mociones" style="margin-right:20px;"/>
         <p:linkButton outcome="index" value="Menu Principal" style="margin-right:20px;"/>
     </h:form>
